--- a/data/playlists/tipistream.html
+++ b/data/playlists/tipistream.html
@@ -12,8 +12,9 @@
   <meta http-equiv="refresh" content="0; url = https://tipiku.my.id/"/>
   
 </head>
-    <body>
-        <p>https://tipiku.my.id/</p> 
+<body>
+
+<h2>Playlist Manual</h2>
 </body>
     <div style="display:none;">
 </html>
@@ -2432,6 +2433,11 @@ https://fta2-cdn-flr.visionplus.id/out/v1/89a6e4261cd7470f83e5869e90440cff/index
 https://fta4-cdn-flr.visionplus.id/out/v1/2fcc58ccec8c45e9aa094fb980eb642d/index.mpd
 
 =============================VIDIO LIVE=============================================================
-letak disini
-{all.m3u8}
 
+<h2>Vidio Live Sports (Auto)</h2>
+<!-- START AUTO VIDIO -->
+<!-- END AUTO VIDIO -->
+
+</body>
+    <div style="display:none;">
+</html>
